Remove images in README.md